<resources>
    <string name="app_name">Mehndi Designs 2020</string>
    <string name="title_activity_home_ad">HomeAdActivity</string>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- below code is my admob unit code-->
    <string name="interstitial_ad_unit_id">ca-app-pub-4074100980294456/6318473795</string>
    <string name="banner_ad_unit_id">ca-app-pub-4074100980294456/5963250576</string>


    <!--    testing code unit-->
<!--    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->

    <string name="handsdesign">Hand Mehndi Designs</string>
    <string name="armsdesing">Arm Mehndi Designs</string>
    <string name="feetdesign">Feet Mehndi Designs</string>
    <string name="fifty">118 Designs</string>
    <string name="thirty">39 Designs</string>
    <string name="twinty">31 Designs</string>
    <string name="hometitle">Complete Mehndi Pack</string>
    <string name="titleSub">EID 2020 Mehndi Desings</string>
    <string name="about">Developed By: Laeeq Khan\n laiqkhan0000@gmail.com</string>

    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
