<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeAdActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="#F1F1F1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="80dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hometitle"
                    android:textSize="24sp"
                    android:textColor="#213068"
                    />

                <TextView
                    android:layout_below="@id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleSub"
                    android:textSize="15sp"
                    android:textColor="#213068"
                    />

                <ImageView
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:src="@drawable/handscircle"
                    android:elevation="5dp"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:rowCount="1">

                <androidx.cardview.widget.CardView
                    android:layout_marginBottom="15dp"
                    app:cardElevation="5dp"
                    android:divider="@android:color/transparent"
                    app:cardCornerRadius="12dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/armcicle"
                            android:elevation="5dp"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="HANDS\nARMS\nFEET"
                            android:layout_alignParentRight="true"
                            android:gravity="right"
                            android:textStyle="bold"
                            android:textSize="26sp"
                            android:autoSizeTextType="uniform"
                            android:textColor="#FFFFFF"
                            android:layout_alignParentEnd="true"
                            />



                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </GridLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id">
                </com.google.android.gms.ads.AdView>



            </RelativeLayout>

            <GridLayout
                android:layout_marginTop="10dp"
                android:rowCount="30"
                android:columnCount="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/handsCard"
                    app:cardElevation="3dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:divider="@android:color/transparent"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"

                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/hands"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoSizeTextType="uniform"
                                android:gravity="left"
                                android:text="@string/handsdesign"
                                android:textColor="#000000"
                                android:textSize="16sp"
                                android:textStyle="bold"

                                />

                            <TextView
                                android:layout_width="94dp"
                                android:layout_height="match_parent"
                                android:layout_below="@+id/hands"
                                android:autoSizeTextType="uniform"
                                android:gravity="left"
                                android:text="@string/fifty"
                                android:textColor="#373737"
                                android:textSize="11sp"
                                android:textStyle="normal" />

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentLeft="true"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginRight="20dp"
                                android:layout_centerInParent="true"
                                android:contentDescription="Hand Mehndi Designs"
                                android:src="@drawable/handscircle"/>
                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/armCard"
                    app:cardElevation="3dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:divider="@android:color/transparent"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"

                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/arms"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoSizeTextType="uniform"
                                android:gravity="left"
                                android:text="@string/armsdesing"
                                android:textColor="#000000"
                                android:textSize="16sp"
                                android:textStyle="bold"

                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_below="@+id/arms"
                                android:autoSizeTextType="uniform"
                                android:gravity="left"
                                android:text="@string/thirty"
                                android:textColor="#373737"
                                android:textSize="11sp"
                                android:textStyle="normal" />

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentLeft="true"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginRight="20dp"
                                android:layout_centerInParent="true"
                                android:contentDescription="Arms Mehndi Designs"
                                android:src="@drawable/armcicle"/>
                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/feetCard"
                    app:cardElevation="3dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:divider="@android:color/transparent"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"

                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/feet"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autoSizeTextType="uniform"
                                android:gravity="left"
                                android:text="@string/feetdesign"
                                android:textColor="#000000"
                                android:textSize="16sp"
                                android:textStyle="bold"

                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_below="@+id/feet"
                                android:autoSizeTextType="uniform"
                                android:gravity="left"
                                android:text="@string/twinty"
                                android:textColor="#373737"
                                android:textSize="11sp"
                                android:textStyle="normal" />

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentLeft="true"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginRight="20dp"
                                android:contentDescription="Feet Mehndi Designs"
                                android:layout_centerInParent="true"
                                android:src="@drawable/feetcircle"/>
                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about"
                android:gravity="center"
                android:textColor="#6D6D6D"
                android:layout_marginTop="30dp">

            </TextView>

        </LinearLayout>
    </ScrollView>


    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/navigationView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="#FFFFFF"-->
    <!--        app:itemBackground="?selectableItemBackgroundBorderless"-->
    <!--        app:itemHorizontalTranslationEnabled="true"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        app:menu="@menu/bottom_nav"/>-->



</RelativeLayout>